data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1368.wast
;; Test 9: - Incorporate `block`, `loop`, nested `block`, another `loop`, and `if` structure. Inside the innermost `block`, use `br_if` targeting the outermost loop (target `4`). Ensure accurate interpretation and jumps. - **Constraint Checked**: Deep Nesting and Label Depth. - **Relation to Incorrect Branch Target Resolution**: Challenges depth counting logic across diverse nested structures.

(assert_invalid
  (module
    (func $test
      (loop (result i32)
        (block (result i32)
          (loop (result i32)
            (block (result i32)
              (if (result i32)
                (i32.const 1)
                (then (br_if 4 (i32.const 1)))
              )
            )
          )
        )
      )
    )
  )
  "type mismatch"
)